--- a/main.css
+++ b/main.css
@@ -2,6 +2,8 @@ SECTION {  background: #CCCCCC;  color:#666666; font-family: verdana;  }
 
 HH1 { color:#666666;  font-family:lato;}
 
+NOM { font-family: Helvetica, Sans-Serif; font-size: 11pt; color: #742f66 ; font-style: italic; font-weight: bold;} 
+
 .container-grid {
   display: grid;
   grid-template-columns: 200px 1000px; /*columns widths*/
