--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 SECTION {  background: #CCCCCC;  color:#666666; font-family: verdana;  }
 
-NOM { font-family: Helvetica, Sans-Serif; font-size: 11pt; color: #742f66 ; font-style: italic; font-weight: bold;} 
+NOM { font-family: Helvetica, Sans-Serif; font-size: 11pt; color: #722F37 ; font-style: italic; font-weight: bold;} 
 
 HH1 { color:#666666;  font-family:lato;}
 
