--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
 SECTION {  background: #CCCCCC;  color:#666666; font-family: verdana;  }
 
-NOM { font-family: Helvetica, Sans-Serif; font-size: 11pt; color: #722F37 ; font-style: italic; font-weight: bold;} 
+NOM { font-family: Helvetica, Sans-Serif; font-size: 12pt; color: #722F37; font-style: italic; font-weight: bold;} 
+
+PAPER {font-family: verdana, Sans-Serif; font-size: 11pt; color: #4E4E4E;}
 
 HH1 { color:#666666;  font-family:lato;}
 
