--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-SECTION {  background: #CCCCCC;  color:#666666; font-family: verdana;  }
+SECTION {  background: #CCCCCC;  color:#666666; font-family: lato;  }
 
 NOM { font-family: Helvetica, Sans-Serif; font-size: 12pt; color: #722F37; font-style: italic; font-weight: bold; } 
 
